kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parlacards-hrastnik
spec:
  selector:
    app: parlacards-hrastnik
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
